@@ -301,114 +301,47 @@
                 </executions>
 
             </plugin>
+            
+            <plugin>
+
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <!-- This is absolutely unnecessary, and the maven javadoc plugin
+                        fails without it. -->
+                        <manifestEntries>
+                            <Add-Opens>${java.module.name}/*=ALL-UNNAMED ${java.module.name}/*=maven.core ${java.module.name}/*=maven.plugin.api ${java.module.name}/*=maven.settings ${java.module.name}/*=plexus.classworlds</Add-Opens>
+                            <Add-Exports>${java.module.name}/*=ALL-UNNAMED ${java.module.name}/*=com.google.guice ${java.module.name}/*=maven.core ${java.module.name}/*=maven.plugin.api ${java.module.name}/*=maven.settings ${java.module.name}/*=maven.plugin.api</Add-Exports>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+
+            </plugin>
+            
         </plugins>
 
         <pluginManagement>
             
             <plugins>
+
                 <plugin>
                     <groupId>${project.groupId}</groupId>
                     <artifactId>cactus-maven-plugin</artifactId>
                     <version>${cactus.previous.version}</version>
                 </plugin>
 
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>${maven-jar-plugin.version}</version>
+                </plugin>
+            
             </plugins>
 
         </pluginManagement>
 
     </build>
-
-    <!-- Profiles -->
-
-    <profiles>
-
-        <profile>
-            <id>release</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-            </activation>
-            <properties>
-                <maven.test.skip.exec>true</maven.test.skip.exec>
-            </properties>
-            <build>
-                <plugins>
-
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-javadoc-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>generate-javadoc</id>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>javadoc-no-fork</goal>
-                                    <goal>jar</goal>
-                                    <goal>aggregate-no-fork</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-source-plugin</artifactId>
-                        <version>${maven-source-plugin.version}</version>
-                        <executions>
-                            <execution>
-                                <id>attach-source-jar</id>
-                                <goals>
-                                    <goal>jar</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-
-                    <plugin>
-                        <groupId>com.telenav.cactus</groupId>
-                        <artifactId>cactus-maven-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>project-metadata</id>
-                                <phase>process-sources</phase>
-                                <goals>
-                                    <goal>project-information</goal>
-                                    <goal>build-metadata</goal>
-                                </goals>
-                                <configuration>
-                                    <verbose>${cactus.maven.plugin.verbose}</verbose>
-                                </configuration>
-                            </execution>                            
-                            <execution>
-                                <id>lexakai</id>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>lexakai</goal>
-                                </goals>
-                                <configuration>
-                                    <cactus.verbose>true</cactus.verbose>
-                                    <cactus.overwrite-resources>true</cactus.overwrite-resources>
-                                    <cactus.update-readme>true</cactus.update-readme>
-                                </configuration>
-                            </execution>
-                            <execution>
-                                <id>copy-javadoc</id>
-                                <phase>install</phase>
-                                <goals>
-                                    <goal>copy-aggregated-javadoc</goal>
-                                    <goal>codeflowers</goal>
-                                </goals>
-                                <configuration>
-                                    <cactus.family>family-or-child-family</cactus.family>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-
-                </plugins>
-            </build>
-        </profile>
-
-    </profiles>
 
     <!-- Source Code -->
 
